src/objects/FI_STATS__c.object
<CustomObject>
    <fields>
        <fullName>Profit_Dollar__c</fullName>
        <formula>Profit_RMB__c / $Setup.Moc_Config__c.ExchangeRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>利润($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profit_RMB__c</fullName>
        <label>利润(￥)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_RMB__c</fullName>
        <label>销售额(￥)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>FI_STATS</label>
    <nameField>
        <displayFormat>FI-{000000}</displayFormat>
        <label>FI_STATS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FI_STATS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>